Fix misc styles for spacing and ordering

--- a/themes/simple_base/css/components/fields.css
+++ b/themes/simple_base/css/components/fields.css
@@ -2,6 +2,10 @@
   margin-bottom: var(--cu-vr2);
 }
 
+.field--type-datetime {
+  margin-top: var(--cu-vr2);
+}
+
 .field--name-field-tags {
   border-bottom: 1px solid #ccc;
   padding-bottom: var(--cu-vr2);
